2017-04-09  Albrecht Dreß

	* libbalsa/mailbox_pop3.c (libbalsa_mailbox_pop3_check): do not
	unref NULL NetClientPop object.

2017-04-09  Albrecht Dreß

	* libnetclient/net-client.c (net_client_new): do not return
	pointer to finalized object.

2017-04-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

Streamline code

	* src/spell-check.c: remove redundant gboolean
	quoted_rex_compiled;
	(balsa_spell_check_start): do not use it;
	(next_word): ditto;
	(balsa_spell_check_destroy): ditto; also use g_clear_pointer.

2017-04-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c (select_part): reset adjustments only when
	  displaying a real message part.

2017-04-07  Albrecht Dreß

Do not emit a critical warning

	* src/balsa-mime-widget.c (balsa_mime_widget_new_unknown): Do
	  not emit a critical warning on the console, e.g. when I select
	  an encrypted message, but cancel the decryption:

2017-04-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* libbalsa/gmime-filter-header.c (g_mime_filter_header_new): use
	g_object_new instead of g_object_newv, because the latter is
	deprecated in glib-2.54.

2017-03-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use GMime's native GIO Stream module

	* libbalsa/gmime-stream-gio.h: removed.
	* libbalsa/libbalsa-vfs.c: do not include it.
	* libbalsa/gmime-stream-gio.c: removed.
	* libbalsa/Makefile.am: remove references to them.


2017-03-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/identity.c (libbalsa_identity_combo_box): compare
	active name with the identity name, not the parenthesized
	version

2017-03-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_local.c (lbml_load_messages_idle_cb): clear
	load_messages_id even when returning early.

2017-03-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Lock mailbox while accessing an idle callback id

	* libbalsa/mailbox.c (lbm_need_threading_idle_cb),
	(libbalsa_mailbox_msgno_inserted),